--- a/NurseryGarden/Views/Shared/_Layout.cshtml
+++ b/NurseryGarden/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="AllProducts">AllProducts</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Basket" asp-action="ShowBasket">AllProducts</a>
+                        </li>
                     </ul>
                 </div>
             </div>
