--- a/NurseryGarden/Views/Product/AllProducts.cshtml
+++ b/NurseryGarden/Views/Product/AllProducts.cshtml
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Show", "Show", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("AddtoBasket", "AddtoBasket", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("AddtoFavorites", "AddtoFavorites", new { /* id=item.PrimaryKey */ })
             </td>
         </tr>
 }
