Added Cardview with image for products, Removed step to show details while create account, fixed checking for used email while account creation

--- a/NurseryGarden/Views/Product/AllProducts.cshtml
+++ b/NurseryGarden/Views/Product/AllProducts.cshtml
@@ -37,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                @Html.ActionLink("Show", "Show", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("ShowProduct", "ShowProduct", new { id=item.Id }) |
                 @Html.ActionLink("AddtoBasket", "AddtoBasket", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("AddtoFavorites", "AddtoFavorites", new { /* id=item.PrimaryKey */ })
             </td>
